fix(colors page): fix column gap
#10

--- a/src/components/colors-type-page/colors-type-page.scss
+++ b/src/components/colors-type-page/colors-type-page.scss
@@ -13,7 +13,7 @@
     @include inner-wrapper($lgWidth: 79.2%);
     display: grid;
     grid-template-columns: 16.875rem 25.1875rem;
-    grid-column-gap: 26.6875rem;
+    grid-column-gap: 37.4%;
     @media (max-width: $screen-md-max) {
       grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
       grid-row-gap: 3rem;
